# tiny-mpi-cxx

./: CMakeLists.txt  LICENSE  README.md
include/tiny_mpi/: tiny_mpi.hpp
src/: tiny_mpi.cpp
